versioned_docs/version-2026.1.1/professor/keyla_christina_almeida_portela.mdx
---
sidebar_label: 'Keyla Christina Almeida Portela'
---

import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Keyla Christina Almeida Portela",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Marketing e Comportamento do Consumidor - 1511",
          "size": 2,
          "teachers": [
            "Keyla Christina Almeida Portela",
            "Leocadia Candido da Silva"
          ],
          "classroom": "laboratorio_de_informatica_a",
          "students": [
            "TGC2026"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Marketing de Eventos - 2431",
          "size": 2,
          "teachers": [
            "Keyla Christina Almeida Portela",
            "Alexandre José Schumacher"
          ],
          "classroom": "sala_5-1",
          "students": [
            "TGC2025"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "Plano de Marketing - 1498",
          "size": 2,
          "teachers": [
            "Keyla Christina Almeida Portela",
            "PSS Administracao"
          ],
          "classroom": "laboratorio_de_informatica_a",
          "students": [
            "TGC2025"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Marketing e Comportamento do Consumidor - 1511",
          "size": 2,
          "teachers": [
            "Keyla Christina Almeida Portela",
            "Leocadia Candido da Silva"
          ],
          "classroom": "laboratorio_de_informatica_a",
          "students": [
            "TGC2026"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": []
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Keyla Christina Almeida Portela

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>

